[gd_scene load_steps=2 format=2]

[ext_resource path="res://BaseURLSorter/BaseURLSorter.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -349.5
margin_top = -304.0
margin_right = 349.5
margin_bottom = 304.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 444.0
margin_right = -15.0
margin_bottom = -15.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_right = 669.0
margin_bottom = 155.0
alignment = 1

[node name="BaseURLLoad" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 669.0
margin_bottom = 102.0
rect_min_size = Vector2( 50, 50 )
text = "Compare differences between BaseURLs"

[node name="MarginContainer2" type="MarginContainer" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -334.5
margin_right = 334.5
margin_bottom = 432.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer2"]
margin_right = 669.0
margin_bottom = 432.0
alignment = 1

[node name="OldBaseURLEdit" type="LineEdit" parent="Panel/MarginContainer2/VBoxContainer"]
margin_top = 184.0
margin_right = 669.0
margin_bottom = 214.0
rect_min_size = Vector2( 500, 30 )
align = 1
expand_to_text_length = true
placeholder_text = "Write Old Base URL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewBaseURLEdit" type="LineEdit" parent="Panel/MarginContainer2/VBoxContainer"]
margin_top = 218.0
margin_right = 669.0
margin_bottom = 248.0
rect_min_size = Vector2( 500, 30 )
align = 1
expand_to_text_length = true
placeholder_text = "Write New Base URL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -595.5
margin_top = -322.5
margin_right = 595.5
margin_bottom = 322.5
window_title = "Ouvrir un r√©pertoire"
resizable = true
mode = 2
access = 2
current_dir = "/Godot Projects/SIDEM WIKI MANAGER"
current_path = "/Godot Projects/SIDEM WIKI MANAGER/"
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/BaseURLLoad" to="." method="_on_BaseURLLoad_pressed"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_FileDialog_dir_selected"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
